--- a/src/Style/WeatherInfo.css
+++ b/src/Style/WeatherInfo.css
@@ -12,11 +12,11 @@ h1 {
   line-height: 28px;
   margin-bottom: 0;
 }
-ul {
+.overview ul {
   margin: -30px;
   padding: 0;
 }
-li {
+.overview li {
   list-style: none;
   margin: 0;
   padding: 0;
