--- a/src/Style/Search.css
+++ b/src/Style/Search.css
@@ -15,3 +15,23 @@
   border-radius: 0.25rem;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
+
+.App {
+  font-family: sans-serif;
+  text-align: center;
+}
+.container-fluid {
+  max-width: 680px;
+  margin: 10px auto;
+  padding: 25px;
+  border: 1px solid #dadde1;
+  border-radius: 10px;
+}
+#loader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 50px auto;
+  height: inherit;
+  background-color: white;
+}
